# src/swagger.json
@@ -29,39 +29,14 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
-                    "type": "string",
-                    "example": "Dr. John Doe"
-                  },
-                  "phone": {
-                    "type": "string",
-                    "example": "+5565981233996"
-                  },
-                  "email": {
-                    "type": "string",
-                    "example": "john.doe@example.com"
-                  },
-                  "cpf": {
-                    "type": "string",
-                    "example": "12345678909"
-                  },
-                  "birthday": {
-                    "type": "string",
-                    "format": "date",
-                    "example": "1980-01-01"
-                  },
-                  "password": {
-                    "type": "string",
-                    "example": "securepassword"
-                  },
-                  "CRM": {
-                    "type": "string",
-                    "example": "123456789"
-                  },
-                  "specialty": {
-                    "type": "string",
-                    "example": "Cardiology"
-                  }
+                  "name": { "type": "string", "example": "Dr. John Doe" },
+                  "phone": { "type": "string", "example": "+5565981233996" },
+                  "email": { "type": "string", "example": "john.doe@example.com" },
+                  "cpf": { "type": "string", "example": "12345678909" },
+                  "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                  "password": { "type": "string", "example": "securepassword" },
+                  "CRM": { "type": "string", "example": "123456789" },
+                  "specialty": { "type": "string", "example": "Cardiology" }
                 },
                 "required": [
                   "name",
@@ -85,39 +60,14 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "id": {
-                      "type": "string",
-                      "example": "1"
-                    },
-                    "name": {
-                      "type": "string",
-                      "example": "Dr. John Doe"
-                    },
-                    "phone": {
-                      "type": "string",
-                      "example": "+5565981233996"
-                    },
-                    "email": {
-                      "type": "string",
-                      "example": "john.doe@example.com"
-                    },
-                    "cpf": {
-                      "type": "string",
-                      "example": "12345678909"
-                    },
-                    "birthday": {
-                      "type": "string",
-                      "format": "date",
-                      "example": "1980-01-01"
-                    },
-                    "CRM": {
-                      "type": "string",
-                      "example": "123456789"
-                    },
-                    "specialty": {
-                      "type": "string",
-                      "example": "Cardiology"
-                    }
+                    "id": { "type": "string", "example": "1" },
+                    "name": { "type": "string", "example": "Dr. John Doe" },
+                    "phone": { "type": "string", "example": "+5565981233996" },
+                    "email": { "type": "string", "example": "john.doe@example.com" },
+                    "cpf": { "type": "string", "example": "12345678909" },
+                    "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                    "CRM": { "type": "string", "example": "123456789" },
+                    "specialty": { "type": "string", "example": "Cardiology" }
                   }
                 }
               }
@@ -130,10 +80,180 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "error": {
-                      "type": "string",
-                      "example": "Doutor já existe"
-                    }
+                    "error": { "type": "string", "example": "Doutor já existe" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/doctors/{id}": {
+      "put": {
+        "tags": ["Doctors"],
+        "summary": "Atualizar um doutor existente",
+        "operationId": "updateDoctor",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID do doutor a ser atualizado",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": { "type": "string", "example": "Dr. John Doe" },
+                  "phone": { "type": "string", "example": "+5565981233996" },
+                  "email": { "type": "string", "example": "john.doe@example.com" },
+                  "cpf": { "type": "string", "example": "12345678909" },
+                  "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                  "password": { "type": "string", "example": "securepassword" },
+                  "CRM": { "type": "string", "example": "123456789" },
+                  "specialty": { "type": "string", "example": "Cardiology" }
+                },
+                "required": [
+                  "name",
+                  "phone",
+                  "email",
+                  "cpf",
+                  "birthday",
+                  "password",
+                  "CRM",
+                  "specialty"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Doutor atualizado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": { "type": "integer", "example": 1 },
+                    "name": { "type": "string", "example": "Dr. John Doe" },
+                    "phone": { "type": "string", "example": "+5565981233996" },
+                    "email": { "type": "string", "example": "john.doe@example.com" },
+                    "cpf": { "type": "string", "example": "12345678909" },
+                    "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                    "CRM": { "type": "string", "example": "123456789" },
+                    "specialty": { "type": "string", "example": "Cardiology" }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Input Invalido",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": { "type": "string", "example": "Doutor não encontrado" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Doctors"],
+        "summary": "Deletar um doutor existente",
+        "operationId": "deleteDoctor",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID do doutor a ser deletado",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Doutor deletado com sucesso"
+          },
+          "404": {
+            "description": "Doutor não encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": { "type": "string", "example": "Doutor não encontrado" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/doctors/profile/{doctor_id}": {
+      "get": {
+        "tags": ["Doctors"],
+        "summary": "Mostrar o perfil de um doutor",
+        "operationId": "showDoctorProfile",
+        "parameters": [
+          {
+            "name": "doctor_id",
+            "in": "path",
+            "required": true,
+            "description": "ID do doutor",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Perfil do doutor encontrado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": { "type": "integer", "example": 1 },
+                    "name": { "type": "string", "example": "Dr. John Doe" },
+                    "phone": { "type": "string", "example": "+5565981233996" },
+                    "email": { "type": "string", "example": "john.doe@example.com" },
+                    "cpf": { "type": "string", "example": "12345678909" },
+                    "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                    "CRM": { "type": "string", "example": "123456789" },
+                    "specialty": { "type": "string", "example": "Cardiology" }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Doutor não encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": { "type": "string", "example": "Doutor não encontrado" }
                   }
                 }
               }
